--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
-    "@angular/fire": "^5.4.2",
+    "@angular/fire": "^6.0.0-rc.1",
     "@angular/forms": "~9.0.5",
     "@angular/material": "^9.1.2",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
-    "fire": "^0.55.1",
-    "firebase": ">= 5.5.7 <8",
+    "install": "^0.13.0",
     "material": "^0.4.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "firebase": "^7.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.5",
